# ternary-intelligence-stack

./: .gitignore  CNAME  README.md
.github/workflows/: rust.yml
albert-agent/: README.md
albert-agent/src/: api_client.py  tools.py
ternlang-root/: .dockerignore  Cargo.toml  Dockerfile  LANGUAGE.md  LICENSE-COMMERCIAL  LICENSE-LGPL  README.md  ROADMAP.md  publish.sh  ternlang_keys.json  test.tern  test_builtins.tern  test_tensor.tern
ternlang-root/examples/: 03_rocket_launch.tern  05_medical_triage.tern  06_git_merge.tern  07_spam_filter.tern  08_evidence_collector.tern  100_event_weather.tern  100_phd_dissertation.tern  101_solar_dispatch.tern  102_battery_storage.tern  103_smart_meter_anomaly.tern  104_ev_charging.tern  105_gas_regulator.tern  106_thermal_storage.tern  107_renewable_curtailment.tern  108_outage_isolation.tern  109_demand_response.tern  10_confidence_escalator.tern  110_carbon_verification.tern  111_shelter_allocation.tern  112_food_bank_eligibility.tern  113_refugee_status.tern  114_cps_referral.tern  115_elder_care.tern  116_disability_accommodation.tern  117_community_grant.tern  118_noise_complaint.tern  119_quarantine_decision.tern  11_form_validator.tern  120_housing_benefit.tern  121_api_rate_limit.tern  122_database_query.tern  123_deployment_readiness.tern  124_ab_test_significance.tern  125_bug_severity.tern  (+149 more)
ternlang-root/ternlang-cli/: Cargo.toml
ternlang-root/ternlang-cli/src/: main.rs
ternlang-root/ternpkg/: Cargo.toml
ternlang-root/ternpkg/src/: main.rs
ternlang-vscode/: README.md  language-configuration.json  package.json
(+58 files in other folders)
