[package]
name             = "ternpkg"
description      = "Package manager for the ternlang ecosystem — ternlang.toml manifest, GitHub-backed registry, install/list/info commands."
version.workspace   = true
edition.workspace   = true
license.workspace   = true
repository.workspace = true
homepage.workspace  = true
authors.workspace   = true
keywords.workspace  = true
categories.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
